18 Nov 2018 - 4.1
	Add support for Gembird EG-PMS2 with idVendor=04b4, idProduct=fd15.
	Remove ineffective seteuid() call.
	When the outlet number is replaced indicate the correct new number.
	Refactor code.
	Update documenation.

18 Feb 2016 - 4.0
	Adjust configuration files to autotools standard.
	Separate the binary into an executable and a library.
	Fix various bugs like a memory leak and unused variables.
	Code cleanup.

	By default only user root can access the Gembird devices.
	File examples/60-sispmctl.rules has been added. It provides udev rules
	which allow group sispmctl to read from and write to the devices. For
	usage copy it to /lib/udev/rules.d/. Then reload the udev rules with
	udevadm control --reload-rules

28 Nov 2011 - 3.1
	cleanup web-themes
	webserver daemonizes when send into listen mode (FREETZ patch)
	fixes for the two mSIS-PM-versions (thanks to ksjh and exelnet)
	several bugfixes and cleanups

30 Mar 2011 - 3.0
	Olivier Matheret added timer functionality
	Heike Zimmerer added gemplug
	Sven Anders added -D option to select device by serial number
	several bugfixes and cleanups

28 Mar 2008 - 2.7
	-m switch for power status added, some other small additions,
	experimental support for ids

03 Mar 2008 - 2.6
	msis-pm (single socket) and sis-pm with new device id of 0xfd13
	supported. Bugfixes.

03 Dec 2007 - 2.5
	some (small) bug-fixes

17 Aug 2006 - 2.4
	added GUI written in Python (see extras directory)
	included bug fixes from Marius Konitzer.

17 Mar 2006 - 2.3
	added support for mSIS-PM devices

03 Mar 2006 - 2.2
	cleaned-up a lot more, added important configure time options

09 Feb 2006 - 2.1
	clean-up
	added some doc, cleaned-up autotool files

05 Feb 2006 - 1.2
	integrated web interface
	including three "skins"

13 Feb 2005 - 1.1a
	supporting multiple usb devices
	fixing naming conventions
	options on output format
	added man page
	prepared for i(18)n

24 Feb 2005 - 1.1
	bugfixes