@@ -17,7 +17,7 @@ Vary: *
                 <DIV STYLE="height: 70px;">&nbsp;</DIV>
                 <DIV ALIGN="center">
                 <TABLE WIDTH="60%" CELLSPACING=0>
-                  <TR><TH COLSPAN=3><H1>SiS PM Control for Linux</H1></TH><TH WIDTH="100">
+                  <TR><TH COLSPAN=3><H1>SiS PM Control for Linux $$version()$$</H1></TH><TH WIDTH="100">
                     <IMG SRC="logo.png" ALT="sispm_http logo"></TH></TR>
                   <TR><TD COLSPAN=4>&nbsp;</TD></TR>
                   <TR><TD>&nbsp;</TD>
