@@ -16,7 +16,7 @@ Vary: *
 </HEAD>
 <BODY>
   <TABLE CELLSPACING=0>
-    <TR><TH CLASS="title1"COLSPAN=2 STYLE="border:12px solid #86CFFF"><H3><FONT COLOR="RED">SiS PM<BR>Control</FONT></H3></TH></TR>
+    <TR><TH CLASS="title1"COLSPAN=2 STYLE="border:12px solid #86CFFF"><H3><FONT COLOR="RED">SiS PM<BR>Control $$version()$$</FONT></H3></TH></TR>
     <TR><TD CLASS="gif2" COLSPAN=2>&nbsp;</TD></TR>
     <TR>
 	<TD CLASS="gif1"><A HREF="$$status(1)?off1.html"><IMG SRC="on.gif" ALT="ON">:on1.html"><IMG SRC="off.gif" ALT="OFF">$$</A></TD>
